--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <title>Todo App</title>
 </head>
 <body>
-  <div class="aaa">
+  <div class="header">
     <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  <div class="main">
+    <p id="add-item">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
+        <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incomplete-tasks">
+    <ul id="incompleted-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
