--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <title>Todo App</title>
 </head>
-<body>
+<body class="app">
   <div class="header">
     <img src="./eisenhower-matrix.jpg">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
     <p id="add-item">
-      <label for="new-task">Add Item</label>
+      <label class="label-new-task" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <input class="input input-text" id="new-task" class="task" type="text">
+        <button class="button" >Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleted-tasks">
-      <li>
-        <input type="checkbox">
+    <h3 class="block-title">Todo</h3>
+    <ul class="list" id="incompleted-tasks">
+      <li class="list-item">
+        <input class="input input-checkbox" type="checkbox">
         <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg"></button>
+        <input class="input input-text"  type="text" class="task">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
+          <img class="button-delete-img" src="./remove.svg"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
+      <li class="list-item edit-mode">
+        <input class="input input-checkbox" type="checkbox">
         <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <input  class="input input-text" type="text" value="Go Shopping" class="task">
+        <button class="button  edit">Save</button>
+        <button class="button  delete">
           <img src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
+    <h3 class="block-title">Completed</h3>
+    <ul class="list" id="completed-tasks">
+      <li class="list-item">
+        <input  class="input input-checkbox" type="checkbox" checked>
         <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <input class="input input-text" type="text" class="task">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
