--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="app">
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" class="top-banner">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
@@ -35,8 +35,8 @@
         <input class="input input-checkbox" type="checkbox">
         <label class="task">Go Shopping</label>
         <input  class="input input-text" type="text" value="Go Shopping" class="task">
-        <button class="button  edit">Save</button>
-        <button class="button  delete">
+        <button class="button edit">Save</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
