refactor(extended-1.1): update with semantic tags

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <title>Todo App</title>
 </head>
 <body class="app">
-  <div class="header">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg" class="top-banner">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
+  </header>
+  <main class="main">
     <p id="add-item">
       <label class="label label-new-task" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -46,14 +46,14 @@
       <li class="list-item">
         <input  class="input input-checkbox" type="checkbox" checked>
         <label class="task label">See the Doctor</label>
-        <input class="input input-text task" type="text" >
+        <input class="input input-text task" type="text">
         <button class="button edit">Edit</button>
         <button class="button delete">
           <img src="./remove.svg" class="button-delete-img">
         </button>
       </li>
     </ul>
-  </div>
-<script src="app.js"></script>
+  </main>
 </body>
+<script src="app.js"></script>
 </html>
