refactor(extended-1.2): add alts to img tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="app">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" class="top-banner">
+    <img src="./eisenhower-matrix.jpg" class="top-banner" alt="Eisenhower matrix">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -29,7 +29,7 @@
         <input class="input input-text task"  type="text" >
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img class="button-delete-img" src="./remove.svg"></button>
+          <img src="./remove.svg" class="button-delete-img" alt="Cross delete button"></button>
       </li>
       <li class="list-item edit-mode">
         <input class="input input-checkbox" type="checkbox">
@@ -37,7 +37,7 @@
         <input  class="input input-text task" type="text" value="Go Shopping" >
         <button class="button edit">Save</button>
         <button class="button delete">
-          <img src="./remove.svg" class="button-delete-img">
+          <img src="./remove.svg" class="button-delete-img"  alt="Cross delete button">
         </button>
       </li>
     </ul>
@@ -49,7 +49,7 @@
         <input class="input input-text task" type="text">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg" class="button-delete-img">
+          <img src="./remove.svg" class="button-delete-img" alt="Cross delete button">
         </button>
       </li>
     </ul>
